--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -2,7 +2,7 @@
 main {
     border: 2px red solid;
     min-height: 600px;
-    height: auto;
+    height: 80vh;
 }
 
 .pokeData {
